--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>"Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible: Alteração do curso</li>
+        <li>Ansible</li>
         <li>Integração Contínua</li>
     </ul>
 </body>
