--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>"Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible: Infraestrutura como código</li>
-        <li>Kubernetes: Introdução a orquestração de containers"</li>
+        <li>Integração Contínua</li>
 
     </ul>
 </body>
